[project]
name = "langchain-google-cloud-sql-pg-jetty"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for PostgreSQL (Jetty Health fork)"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Jetty Health", email = "alex@myjettyhealth.com"},
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]

dependencies = [
    "cloud-sql-python-connector[asyncpg] >= 1.10.0",
    "numpy >= 1.24.4",
    "langchain-postgres >= 0.0.15",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/JettyHealth/langchain-google-cloud-sql-pg-python"
Repository = "https://github.com/JettyHealth/langchain-google-cloud-sql-pg-python.git"
"Bug Tracker" = "https://github.com/JettyHealth/langchain-google-cloud-sql-pg-python/issues"
Changelog = "https://github.com/JettyHealth/langchain-google-cloud-sql-pg-python/blob/main/CHANGELOG.md"
"Upstream" = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python"

[project.optional-dependencies]
langgraph = [
    # Upper bound verified against langgraph-checkpoint 4.1.x: checkpoint
    # metadata no longer uses the untyped JsonPlusSerializer.dumps/loads
    # helpers that 4.x removed (plain JSON instead).
    "langgraph-checkpoint>=2.0.9, <4.2"
]
test = [
    "black[jupyter]==25.9.0",
    "isort==6.1.0; python_version == '3.9'",
    "isort==7.0.0; python_version >= '3.10'",
    "mypy==1.18.2",
    "pytest-asyncio==0.26.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "langchain-tests==0.3.22",
    "langgraph==0.6.10"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
